LPD-68036 Refactor test